k8s/custom/indexer_agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer-agent
spec:
  template:
    spec:
      containers:
        - name: indexer-agent
