k8s/custom/indexer_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer-service
spec:
  template:
    spec:
      containers:
        - name: indexer-service
