k8s/custom/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: indexer
  annotations:
    ingress.kubernetes.io/target-proxy: replace-me
